--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,15 @@ dependencies:
   http: ^0.12.0+1
   shared_preferences: ^0.4.2
   rxdart: ^0.21.0
-  location: ^1.4.0
-  image_picker: ^0.4.5
+  location: ^2.3.5
+  image_picker: ^0.6.0+9
   mime: ^0.9.6+2
   url_launcher: ^5.0.1
+  permission_handler: "^3.1.0"
+  camera: ^0.5.2+1
+  sms: ^0.2.4
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
