--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  fluttertoast: ^3.1.0
   cupertino_icons: ^0.1.2
   scoped_model: ^0.3.0
   http: ^0.12.0+1
@@ -36,7 +37,8 @@ dependencies:
   permission_handler: "^3.1.0"
   camera: ^0.5.2+1
   sms: ^0.2.4
-  path_provider:
+  sqflite: ^1.1.3
+  path_provider: ^0.5.0+1
   path:
 
 dev_dependencies:
