--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^1.1.3
   path_provider: ^0.5.0+1
   path:
+  contacts_service: ^0.2.7
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ic_launcher.png
+    - assets/images/background.png
+    - assets/images/eButton.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
